# agent-release-gates

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  internal_ai_agent_project_plan.md  pyproject.toml  streamlit_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  eval_improvement.yml  external_review.yml
.github/workflows/: ci.yml  keepalive.yml  pages.yml
.streamlit/: config.toml
app/: streamlit_app.py
config/: action_risk_policy.yaml  incident_release_policy.json  safety_taxonomy.yaml
data/eval/: golden_cases.jsonl  human_calibration_cases.jsonl  red_team_cases.jsonl  safety_challenge_cases.jsonl  safety_prevalence_cases.jsonl  safety_secondary_review_validation_cases.jsonl
data/eval_cases/: goal_conflict_cases.jsonl  incident_regression_cases.jsonl  instruction_hierarchy_cases.jsonl  memory_context_pollution_cases.jsonl
data/incidents/: incident_cases.jsonl  trace_events.jsonl
data/public/: techqa_rag_eval_sample.jsonl  wixqa_public_rag_sample.jsonl
data/review/: external_human_review_label_template.csv  external_human_review_packet.csv  external_human_review_reviewer_guide.md
docs/: agent_safety_intervention_study.md  architecture.md  baseline_v1_summary.md  benchmark_card.md  candidate_results_schema.md  career_notes.md  dashboard.md  data_dictionary.md  dataset_card.md  decision_memo.md  engineering_writeup.md  evaluate_your_agent_quickstart.md  evaluation_plan.md  external_human_review_protocol.md  failure_taxonomy.md  incident_pack_schema.md  inspect_quickstart.md  model_card.md  operations_runbook.md  product_pivot_plan.md  project_direction.md  publishing.md  requirements_matrix.md  research_roadmap.md  reviewer_handoff_pack.md  safety_prevalence_module_plan.md  safety_threshold_decision_memo.md  technical_artifacts.md  threat_model.md
docs/history/: README.md  decision_memo.md  project_direction.md
examples/incident_pack_minimal/: agent_run_log.jsonl  candidate_results_pass.jsonl  incident_cases.jsonl  incident_release_policy.json  langgraph_log.jsonl  openai_agents_log.jsonl  trace_events.jsonl
ops/: otel-collector-config.yaml
reports/: action_gate_intervention.json  action_gate_intervention.md  agent_eval_cases.jsonl  agent_eval_summary.json  agent_otel_spans.jsonl  agent_safety_intervention_study.json  agent_trace_examples.jsonl  baseline_eval_cases.jsonl  baseline_eval_summary.json  baseline_v1_summary.json  business_impact_summary.json  business_impact_summary.md  collector_export_preview.json  dataset_profile.json  embedding_eval_cases.jsonl  embedding_eval_summary.json  eval_comparison.json  evaluation_gates.json  evaluation_history.json  evaluation_report.html  evaluation_report.md  external_human_review_manifest.json  external_human_review_summary.json  extraction_eval_cases.jsonl  extraction_eval_summary.json  failure_taxonomy_summary.json  goal_conflict_intervention.json  goal_conflict_intervention.md  human_calibration_cases.jsonl  human_calibration_summary.json  hybrid_eval_cases.jsonl  hybrid_eval_summary.json  improved_eval_cases.jsonl  improved_eval_summary.json  incident_memo_INC-2026-0001.md  incident_memo_INC-2026-0002.md  incident_memo_INC-2026-0003.md  incident_memo_INC-2026-0004.md  incident_memo_INC-2026-0005.md  incident_memo_INC-2026-0006.md  (+62 more)
schemas/: candidate_results_v1.schema.json  incident_pack_v1.schema.json
scripts/: agent_safety.py  build_public_site.py  check_otel_collector_deployment.py  evaluate_action_gates.py  evaluate_goal_conflict_intervention.py  evaluate_grounding_interventions.py  evaluate_instruction_hierarchy.py  evaluate_memory_context_intervention.py  export_candidate_results.py  export_otel_collector.py  export_public_report.py  generate_synthetic_data.py  prepare_external_human_review.py  prepare_multi_model_comparison.py  prepare_public_rag_model_reranker_packet.py  prepare_techqa_public_benchmark.py  prepare_wixqa_public_benchmark.py  promote_model_judge_result.py  run_agent_eval.py  run_all_evals.py  run_baseline_eval.py  run_extraction_eval.py  run_incident_replay.py  run_model_judge_eval.py  run_provider_embedding_eval.py  run_public_rag_provider_embedding_eval.py  run_real_agent_replay.py  run_safety_classifier_eval.py  run_security_eval.py  run_techqa_public_eval.py  run_wixqa_public_eval.py  smoke_otel_collector.py
src/internal_ai_agent/: __init__.py  cli.py  io.py
tests/unit/: test_action_safety.py  test_agent_eval.py  test_agent_runner.py  test_agent_safety_cli.py  test_agent_workflow.py  test_api.py  test_baseline.py  test_business_impact.py  test_candidate_results_export.py  test_cli.py  test_collector.py  test_dashboard_data.py  test_extraction.py  test_failure_taxonomy.py  test_framework_exporters.py  test_gates.py  test_human_calibration.py  test_incident_replay.py  test_inspect_scoring.py  test_otel.py  (+22 more)
(+73 files in other folders)
