[project]
name = "agent-release-gates"
version = "0.1.0"
description = "Synthetic internal AI agent evaluation lab for enterprise operations workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "fastapi>=0.115.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "streamlit>=1.38.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/internal_ai_agent"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
