[project]
name = "agent-release-gates"
version = "0.1.0"
description = "Release-readiness gates for AI agents: replay known incidents, apply policy-as-code gates, and produce ship/warn/block evidence before an agent, prompt, model, or tool-policy change ships."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "fastapi>=0.115.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "streamlit>=1.38.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
agent-safety = "internal_ai_agent.cli:main"

# Inspect (UK AISI) task discovery. `inspect_ai` is an optional peer dependency
# (pip install inspect_ai) so the deterministic core stays lean; once installed,
# `inspect eval agent-release-gates/incident_replay --model <provider/model>` runs.
[project.entry-points.inspect_ai]
agent_release_gates = "internal_ai_agent.inspect_suite._registry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/internal_ai_agent"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
